# web-health-monitor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  JIRA_BACKLOG.md  README.md  app.py  auth.py  chatbot_router.py  checker.py  cli.py  db.py  deploy.sh  docker-compose.yml  graphql_app.py  logging_config.py  messaging.py  migrate_db.py  models.py  monitor.db  pyproject.toml  requirements.txt  update-azure.ps1  v1_router.py  worker.py
.github/workflows/: azure-cicd.yml  ci.yml  deploy-acr.yml  main.yml
k8s/: deployment.yaml
monitoring/: logstash.conf  prometheus.yml
static/css/: style.css
static/js/: main.js
templates/: index.html
terraform/: .terraform.lock.hcl  main.tf
tests/: test_api.py  test_checker.py
